--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p>Tu voz será una herencia para que otros no pasen por situaciones en las que expongan sus vidas. Estar aquí significa pensar en los demás.</p>
                 </div>
                 <button class="boton" id="boton">Continuar</button>
-                <a target="_blank" href="#">Nuestras normas de la comunidad, no lo olvides</a>
+                <a target="_blank" href="https://alcon-72.github.io/Normas-Comunidad/">Nuestras normas de la comunidad, no lo olvides</a>
             </div>
         </div>
         
